--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -29,7 +29,7 @@ client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
   console.log('logged in anonymously as user')
 });
 
-client.callFunction("getGithubUsers", ["{{slug}}"]).then(result => {
+client.callFunction("getGithubUsers", "{{slug}}").then(result => {
   createMediumCard(result.medium)
 });
 
