--- a/src/less/post.less
+++ b/src/less/post.less
@@ -54,6 +54,7 @@
 
 		@media(max-width: 600px) {
 			text-align: center !important;
+			 font-size: 1.5em;
 		}
 
 		a {
@@ -82,7 +83,7 @@
 			font-weight: 600;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.1em;
+			font-size: em;
 			line-height: 1.3;
 			max-width: 95%;
 			text-align: center;
@@ -182,16 +183,19 @@
 		display: flex;
 		width: auto;
 		align-items: center;
-		@media(max-width: 800px) {
+		justify-content: flex-start;
 
+		@media(max-width: 800px) {
+			margin: auto 40px 30px;
 		}
+
 		@media(max-width: 600px) {
 			display: flex;
 			justify-content: space-between;
 			padding: 0;
 			max-width: none;
 			width: auto;
-			margin: 0 35px !important;
+			margin: 0 18px !important;
 			padding-top: 0;
 			justify-content: space-around;
 		}
@@ -783,16 +787,17 @@
 		white-space: nowrap;
 		font-style: italic;
 		@media(max-width: 600px) {
-			margin: 0 auto 60px;
+			margin: 0 auto 70px;
 			font-size: 14px;
 			padding: 0;
 			height: 0;
 			line-height: 4;
-			padding-top: 30px;
-			line-height: 1.75;
-			width: 90%;
-			/* overflow: hidden; */
+			padding-top: 20px;
+			line-height: 1.5;
+			width: 83%;
 			display: block;
+			white-space: normal;
+			color: #54537d;
 		}
 	}
 
@@ -981,7 +986,7 @@
 				margin-right: calc(~"-50vw + 50%");
 				width: auto !important;
 				margin-top: 25px;
-				margin-bottom: 25px;
+				margin-bottom: 0;
 
 				img {
 					width: 100%;
