--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -4,7 +4,7 @@
 	<div class="recent-post">
 		{{#get "users"}}
 			{{#foreach users}}
-				<div class="single-author">
+				<div class="single-author" data-value="{{slug}}">
 					{{#unless profile_image}}
 						<a href="{{url}}"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
 					{{/unless}}
