--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -18,18 +18,21 @@
 					</div>
 				</div>
 				<script>
+				$(document).ready(function(){
+					function setRole(result) {
+						$('.' + result.slug).find('.role').text(result.title);
+					}
 
-				function setRole(result) {
-					$('.' + result.slug).find('.role').text(result.title)
-				})
- 
-				stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
-					console.log('logged in anonymously as user')
+					stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
+						console.log('logged in anonymously as user')
+					});
+
+					stitchClient.callFunction("AuthorTitle", "{{slug}}").then(result => {
+						setRole(result)
+					});
 				});
 
-				stitchClient.callFunction("AuthorTitle", "{{slug}}").then(result => {
-					setRole(result)
-				});
+
 				</script>
 				{{/foreach}}
 			{{/get}}
