--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -168,6 +168,9 @@
 			transition: all .1s ease-out;
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
+			display:none;
+			withd: 0px !important;
+			overflow: hidden !important;
 
 
 			@media(max-width: 800px) {
